# barq-vault

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
config/: default.toml  production.toml
crates/barq-cli/: Cargo.toml
crates/barq-cli/src/: main.rs
crates/barq-cli/src/commands/: config_cmd.rs  delete.rs  fetch.rs  ingest.rs  mod.rs  ping.rs  search.rs  stats.rs
crates/barq-client/: Cargo.toml
crates/barq-client/src/: client.rs  lib.rs
crates/barq-client/src/tests/: client_tests.rs
crates/barq-compress/: Cargo.toml  build.rs
crates/barq-compress/benches/: compression_bench.rs
crates/barq-compress/src/: embedding.rs  lib.rs  lz4.rs  lzma.rs
crates/barq-compress/src/cpp/: codec.h  codec_lz4.cpp  codec_lzma.cpp
crates/barq-compress/src/tests/: delta_tests.rs  dispatch_tests.rs  embedding_tests.rs  lz4_tests.rs  lzma_tests.rs  mod.rs
crates/barq-index/: Cargo.toml
crates/barq-index/benches/: index_bench.rs
crates/barq-index/src/: bm25.rs  hybrid.rs  lib.rs  manager.rs  metadata_index.rs  tokenizer.rs  vector.rs
crates/barq-index/src/tests/: bm25_tests.rs  hybrid_tests.rs  mod.rs  tokenizer_tests.rs  vector_tests.rs
crates/barq-ingest/: Cargo.toml
crates/barq-ingest/src/: chunker.rs  detector.rs  embedder.rs  lib.rs  pipeline.rs  summarizer.rs
crates/barq-ingest/src/extraction/: document.rs  mod.rs  ocr.rs  stt.rs  text.rs  vlm.rs
crates/barq-ingest/src/tests/: chunker_tests.rs  detector_tests.rs  embedder_tests.rs  mod.rs  pipeline_tests.rs  summarizer_tests.rs
crates/barq-proto/: Cargo.toml  build.rs
crates/barq-proto/src/: convert.rs  lib.rs
crates/barq-proto/src/tests/: convert_tests.rs  mod.rs
crates/barq-server/: Cargo.toml
crates/barq-server/src/: config.rs  lib.rs  main.rs  state.rs
crates/barq-server/src/grpc/: mod.rs  service.rs
crates/barq-server/src/rest/: mod.rs
crates/barq-server/src/rest/handlers/: fetch.rs  ingest.rs  mod.rs  search.rs
crates/barq-server/src/rest/middleware/: auth.rs
crates/barq-server/src/tests/: grpc_tests.rs  mod.rs  rest_tests.rs  state_tests.rs
crates/barq-server/tests/: test_compression.rs  test_hybrid_search.rs  test_ingest_text.rs  test_search.rs
crates/barq-store/: Cargo.toml
crates/barq-store/benches/: store_bench.rs
crates/barq-store/src/: cf.rs  lib.rs  metadata.rs  payloads.rs  records.rs  store.rs
crates/barq-store/src/tests/: metadata_tests.rs  mod.rs  payloads_tests.rs  records_tests.rs  store_tests.rs
crates/barq-test-utils/: Cargo.toml
crates/barq-test-utils/src/: assertions.rs  builders.rs  fixtures.rs  lib.rs  mocks.rs
crates/barq-types/: Cargo.toml
crates/barq-types/src/: api.rs  error.rs  lib.rs  modality.rs  record.rs
crates/barq-types/src/tests/: error_tests.rs  mod.rs  modality_tests.rs  record_tests.rs
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  benchmarks.md
proto/: barq_vault.proto
scripts/: bench.sh  dev.sh  run_benchmarks.sh  run_tests.sh  setup.sh
