[[bin]]
name = "barq-cli"
path = "src/main.rs"

[package]
name = "barq-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for barq-vault"

[dependencies]
tokio         = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
uuid          = { workspace = true }
anyhow        = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }
clap          = { workspace = true }
barq-types    = { path = "../barq-types" }
barq-client   = { path = "../barq-client" }
barq-ingest   = { path = "../barq-ingest" }
toml = "0.8"
barq-server = { version = "0.1.0", path = "../barq-server" }
reqwest.workspace = true
