[package]
name = "barq-client"
version = "0.1.0"
edition = "2021"
description = "Rust client SDK for barq-vault with gRPC and REST transport providers"

[lib]
name = "barq_client"
path = "src/lib.rs"

[dependencies]
tokio         = { workspace = true }
tonic         = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
uuid          = { workspace = true }
anyhow        = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
reqwest       = { workspace = true }
bytes         = { workspace = true }
async-trait   = { workspace = true }
base64        = { workspace = true }
barq-types    = { path = "../barq-types" }
barq-proto    = { path = "../barq-proto" }
barq-ingest   = { path = "../barq-ingest" }

[dev-dependencies]
barq-test-utils = { path = "../barq-test-utils" }
rstest = { workspace = true }
