[package]
name = "barq-compress"
version = "0.1.0"
edition = "2021"
description = "C++ FFI compression engine for barq-vault (LZMA, LZ4, delta-f32 + Zstd)"

[lib]
name = "barq_compress"
path = "src/lib.rs"

[[bench]]
name = "compression_bench"
harness = false

[dependencies]
bytemuck      = { workspace = true }
zstd          = { workspace = true }
thiserror     = { workspace = true }
anyhow        = { workspace = true }
barq-types    = { path = "../barq-types" }

[dev-dependencies]
barq-test-utils = { path = "../barq-test-utils" }
rstest = { workspace = true }
proptest = { workspace = true }
approx = "0.5"
criterion = { version = "0.5", features = ["async_tokio"] }

[build-dependencies]
cc      = "1"
bindgen = "0.70"
