[package]
name = "barq-ingest"
version = "0.1.0"
edition = "2021"
description = "Ingestion pipeline: OCR, STT, VLM, LLM summarization, and embedding for barq-vault"

[lib]
name = "barq_ingest"
path = "src/lib.rs"

[dependencies]
serde         = { workspace = true }
serde_json    = { workspace = true }
uuid          = { workspace = true }
anyhow        = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
tokio         = { workspace = true }
reqwest       = { workspace = true }
bytes         = { workspace = true }
base64        = { workspace = true }
async-trait   = { workspace = true }
blake3        = { workspace = true }
barq-types    = { path = "../barq-types" }
barq-compress = { path = "../barq-compress" }
barq-index    = { path = "../barq-index" }
tempfile      = "3"
zip           = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
barq-test-utils = { path = "../barq-test-utils" }
rstest = { workspace = true }
wiremock = { workspace = true }
pretty_assertions = { workspace = true }
