[[bin]]
name = "barq-server"
path = "src/main.rs"

[package]
name = "barq-server"
version = "0.1.0"
edition = "2021"
description = "gRPC + REST server entrypoint for barq-vault"

[dependencies]
tokio              = { workspace = true }
tonic              = { workspace = true }
axum               = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
uuid               = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
bytes              = { workspace = true }
config             = { workspace = true }
tokio-stream       = { workspace = true }
async-trait        = { workspace = true }
tower-http         = { workspace = true }

barq-types         = { path = "../barq-types" }
barq-store         = { path = "../barq-store" }
barq-index         = { path = "../barq-index" }
barq-ingest        = { path = "../barq-ingest" }
barq-proto         = { path = "../barq-proto" }
barq-compress      = { path = "../barq-compress" }
subtle             = "2"
base64             = { workspace = true }

[dev-dependencies]
barq-test-utils = { path = "../barq-test-utils" }
tempfile = { workspace = true }
serial_test = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = "0.4"
blake3 = { workspace = true }
