[package]
name = "barq-test-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
tempfile = { workspace = true }
fake = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
barq-types = { path = "../barq-types" }
wiremock = { workspace = true }
